# bagel

./: .gitignore  Cargo.toml  GIT_WORKFLOW.md  README.md
.githooks/: commit-msg  pre-commit  pre-push  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: auto-merge.yml  changelog.yml  ci.yml  release.yml
src/: main.rs
src/browser/: mod.rs  security.rs  tabs.rs  webview.rs
src/extensions/: mod.rs  userscripts.rs  userstyles.rs
src/search/: mod.rs  provider.rs
src/storage/: bookmarks.rs  cookies.rs  history.rs  mod.rs
src/ui/: menu.rs  mod.rs  toolbar.rs  window.rs
src/updates/: github.rs  mod.rs
src/utils/: config.rs  logger.rs  mod.rs
