[package]
name = "bagel"
version = "0.1.0"
edition = "2021"
authors = ["frgmt0"]
description = "A minimal, performant web browser built with Rust and Iced"
repository = "https://github.com/frgmt0/bagel"
license = "MIT"

[dependencies]
iced = { version = "0.12", features = ["tokio", "debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
rusqlite = { version = "0.30", features = ["bundled"] }
base64 = "0.21"
urlencoding = "2.1"

